samples/_failures_safe/1761194315_3dc0fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d2e00ec.c:186: error: expected ‘;’, ‘,’ or ‘)’ at end of input
